# webuddhist-text-uploader

./: .gitignore  README.md  collection_upload_log copy.csv  collection_upload_log.csv  get_category_text.py  manifestation_status_log.csv  pyproject.toml  remove_mapping copy.py  remove_mapping.py  segments_upload_log.csv  test.py  text_upload_log.csv  texts_id.json  toc_upload_log.csv
app/: main.py
uploader_app/: config.py  pipeline.py
uploader_app/collection/: __init__.py  collection_model.py  collection_repository.py  collection_service.py  collection_upload_log.py
uploader_app/mappings/: mapping_models.py  mapping_service.py
uploader_app/segments/: segment_model.py  segment_respository.py  segment_service.py
uploader_app/table_of_contents/: toc_repository.py  toc_service.py  toc_upload_log.py
uploader_app/text_group/: text_group_model.py  text_group_repository.py  text_groups_service.py  text_upload_log.py
