[tool.poetry]
name = "webuddhist-text-uploader"
version = "0.1.0"
description = "FastAPI service for uploading and serving Buddhist texts"
authors = ["Sandup <your-email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }

[tool.poetry.group.dev.dependencies]
pytest = "*"
httpx = "*"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


